# assistant

./: .gitignore  Makefile  REACT_NATIVE_PROMPT.md  README.md  TAILSCALE_SETUP.md  UV_USAGE.md  ah_n8n_client.py  ah_price_checker.py  ah_price_checker_demo.py  ah_price_checker_v2.py  albert_heijn_scraper.py  albert_heijn_workflow.json  grocery_database.db  n8n_trigger.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_workflow.json  simple_trigger.py  start_api.sh
backend/api/: geocoding.py  main.py  supermarkets.py  supermarktscanner_scraper.py
backend/scrapers/AH/: ah_comprehensive_scraper.py  ah_selenium_scraper.py  sync_all_ah_data.py
backend/scrapers/Aldi/: aldi_comprehensive_scraper.py
backend/utils/: clear_database.py
frontend/: app.py
frontend/.streamlit/: config.toml
mobile/: .gitignore  App.tsx  README.md  TESTING.md  app.json  package.json  tsconfig.json
mobile/src/api/: client.ts
mobile/src/components/: MapPreview.tsx  ProductCard.tsx  SupermarketList.tsx
mobile/src/context/: ApiContext.tsx
mobile/src/hooks/: useSupermarketApi.ts
mobile/src/screens/: LocationSetupScreen.tsx  ProductSearchScreen.tsx
mobile/src/types/: index.ts
