[project]
name = "n8n-grocery-scraper"
version = "0.1.0"
description = "Grocery price scraper for Dutch supermarkets (AH, Aldi, etc.)"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "streamlit>=1.50.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.2",
    "undetected-chromedriver>=3.5.5",
    "pyautogui>=0.9.54",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "geopy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

